@@ -25,7 +25,8 @@ module Padrino
         #   MyApp.cache.get('records')
         #
         def get(key)
-          @backend.get(key)
+          code = @backend.get(key)
+          Marshal.load(code) if code
         end
 
         ##
@@ -37,6 +38,7 @@ module Padrino
         #   MyApp.cache.set('records', records, :expires_in => 30) # => 30 seconds
         #
         def set(key, value, opts = nil)
+          value = Marshal.dump(value) if value
           if opts && opts[:expires_in]
             expires_in = opts[:expires_in].to_i
             expires_in = Time.new.to_i + expires_in if expires_in < EXPIRES_EDGE
